# rest-client

./: CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: package-publishing.yml  pr-checks.yml  pr-validation.yml  publish.yml  release-validation.yml
csharp/: HPKVClientSolution.sln  README.md
csharp/HPKVClient/: HPKVClient.cs  HPKVClient.csproj  Models.cs
csharp/HPKVExample/: HPKVExample.csproj  Program.cs
go/: README.md  client.go  go.mod  models.go
go/example/: main.go
java/: README.md  pom.xml
java/src/main/java/io/hpkv/client/: HPKVClient.java  HPKVException.java
java/src/main/java/io/hpkv/client/example/: Example.java
java/src/main/java/io/hpkv/client/models/: BaseResponse.java  GetRecordResponse.java  IncrementRequest.java  IncrementResponse.java  OperationResponse.java  RecordItem.java  (+2 more)
node/: .gitignore  README.md  example.js  hpkv-client.js  jest.config.js  package-lock.json  package.json
node/tests/: basic-unit.test.js  basic.test.js
python/: __init__.py  async_example.py  async_hpkv_client.py  example.py  hpkv_client.py  models.py  setup.py
sdk/node/: .env.example  .eslintignore  .eslintrc.json  .gitignore  CHANGELOG.md  README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json
sdk/node/examples/: example.ts
sdk/node/src/: client.ts  index.ts  types.ts
sdk/node/tests/: integration.test.ts
sdk/python/: README.md  pyproject.toml  requirements-test.txt
sdk/python/examples/: example.py
sdk/python/src/hpkv_rest_client/: __init__.py  hpkv_client.py
sdk/python/tests/: conftest.py  test_hpkv_client.py
